--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.datasource.url=jdbc:h2:mem:test
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+
+
+spring.security.user.password=test
+spring.security.user.name=user
+logging.level.*=DEBUG
+
+
+learning-journal.default.user.name=admin
+learning-journal.default.user.password=test
+learning-journal.default.user.email=admin@learning-journal.de
