--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.security.user.password=test
 spring.security.user.name=user
-logging.level.org.*=DEBUG
+logging.level.org.*=INFO
 
 
 learning-journal.default.user.name=admin
